samples/_failures_safe/1761141997_de457f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_052cbedd.c: In function ‘main’:
./samples/SAFE/__tmp_052cbedd.c:167:13: error: expected expression at end of input
  167 |             machine.state != RETURNING_CHANGE && machine.state != ERROR)
      |             ^~~~~~~
./samples/SAFE/__tmp_052cbedd.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_052cbedd.c:167:13: error: expected declaration or statement at end of input
